# 2025_20657524

./: .gitignore  README.md  adder.cpp  adder_8h.html  adder_8h_source.html  calc.cpp  git-cheat-sheet.txt  globals.html  globals_func.html  hi-and-date.cmd  index.html
.github/workflows/: doxygen-deploy.yml
Calc/: CMakeLists.txt  adder.cpp  calc.cpp
Worksheet3/: adder.h  calc.cpp  hello.cpp
Worksheet3/adder_dynamic/lib/: libadder.lib
Worksheet3/adder_static/lib/: libadder.lib
Worksheet4/hello_cmake/: CMakeLists.txt
Worksheet5/: CMakeLists.txt  adder.h  adder_8h.html  adder_8h_source.html  doxygen_crawl.html  files.html  globals_func.html  navtreedata.js
Worksheet5/.github/workflows/: doxygen-deploy.yml
Worksheet5/html/: globals.html
Worksheet5/latex/: adder_8h.tex  adder_8h_source.tex
Worksheet6/VRBaseStation/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  icons.qrc  icons.qrc.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet7/Exercise3/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
hello_cmake/: CMakeLists.txt
